--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wapman-admin",
+  "name": "course design management",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -38,7 +38,9 @@
     "qcloudsms_js": "^0.1.0",
     "redis": "^2.8.0",
     "string-random": "^0.1.0",
-    "ws": "^6.2.1"
+    "ws": "^6.2.1",
+    "koa-passport": "^4.1.3",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
